--- a/templates/fragments/navbar.html.twig
+++ b/templates/fragments/navbar.html.twig
@@ -5,10 +5,14 @@
         <div class="collapse navbar-collapse"
              id="navbarNav">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="{{ path('signIn') }}">Se connecter</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('signUp') }}">S'inscrire</a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('account') }}"><i class="fa fa-user-circle"></i></a>
-                </li>
+                {% if not app.user %}
+                    <li class="nav-item"><a class="nav-link" href="{{ path('signIn') }}">Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('signUp') }}">S'inscrire</a></li>
+                {%  else %}
+                    <li class="nav-item"><a class="nav-link" href="{{ path('logOut') }}">Se déconnecter</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="{{ path('account') }}"><i class="fa fa-user-circle"></i></a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
