--- a/templates/security/signUp.html.twig
+++ b/templates/security/signUp.html.twig
@@ -13,6 +13,9 @@
             <div class="form-group">
                 {{ form_row(form.login, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Email'}}) }}
             </div>
+        <div class="form-group">
+            {{ form_row(form.pseudo, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Pseudo'}}) }}
+        </div>
             <div class="form-group">
                 {{ form_row(form.password.first, {'attr':{'placeholder':'Mot de passe'}}) }}
             </div>
