--- a/templates/security/signIn.html.twig
+++ b/templates/security/signIn.html.twig
@@ -9,6 +9,9 @@
         <form action="{{ path('signIn') }}" class="gradient" method="post" style="filter: blur(0px);">
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
+            {% if error %}
+                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
             <div class="form-group"><input class="form-control form-sign" required type="text" name="_username" placeholder="Email"></div>
             <div class="form-group"><input class="form-control form-sign" required type="password" name="_password" placeholder="Mot de passe"></div>
             <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Se connecter</button></div><a class="forgot" href="{{ path('signUp') }}">vous n'avez pas encore de compte ?</a></form>
