--- a/templates/profil/roomSettings.html.twig
+++ b/templates/profil/roomSettings.html.twig
@@ -13,6 +13,9 @@
         {{ form_row(form.showScore,{'label':'Montrer le score:', 'attr':{'class':'form-check-label '}}) }}
     </div>
     <div class="form-group">
+        {{ form_row(form.oneAnswerOnly,{'label':'Questions à choix multiple:', 'attr':{'class':'form-check-label '}}) }}
+    </div>
+    <div class="form-group">
        {{ form_row(form.numberRound,{'label':'Nombre de tours', 'attr':{'class':'form-control '}}) }}
     </div>
     <div class="form-row">
@@ -21,8 +24,8 @@
     <div class="form-check">
     <div class="souscheck">
     <div class="form-check">
-               {{ form_row(form.subCategories,{'label':false, 'attr':{'class':'form-check-label'}}) }}
-    {#{{ form_row(form.subCategories,{'label':false, 'attr':{'class':'form-check-label'}}) }}
+    {# {{ form_row(form.subCategories,{'label':false, 'attr':{'class':'form-check-label'}}) }}
+    {{ form_row(form.subCategories,{'label':false, 'attr':{'class':'form-check-label'}}) }}
        <div class="souscheck">
                     {{ form_row(form.choiceGame,{'label':'Culture', 'attr':{'class':'form-check-label'}}) }}
                 </div>
