--- a/templates/global/account.html.twig
+++ b/templates/global/account.html.twig
@@ -47,26 +47,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col"><button class="btn btn-primary float-left" type="button" data-toggle="modal" data-target="#modalChangePassword">Modifier mot de passe</button>
-                        <div class="modal fade" role="dialog" tabindex="-1" id="modalChangePassword">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Modifier mes informations</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
-                                    <div class="modal-body" style="padding: 0;">
-                                        <form style="padding: 20px;">
-                                            <div class="form-group"><label for="email">Mot de passe</label><input class="form-control" type="email" placeholder="Mot de passe"></div>
-                                            <div class="form-group"><label for="email">Nouveau mot de passe</label><input class="form-control" type="email" id="email-11" placeholder="Nouveau mot de passe"></div>
-                                            <div class="form-group"><label for="email">Confirmer nouveau mot de passe</label><input class="form-control" type="email" id="email-12" placeholder="Nouveau mot de passe"></div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer"><button class="btn btn-light" type="button" data-dismiss="modal">Annuler</button><button class="btn btn-primary btn-success" type="button">Modifier</button></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="col"><a href="{{ path('changePassword') }}" class="btn btn-primary float-left">Modifier mot de passe</a></div>
                 </div>
-                <div class="text-center" style="margin-top: 30px;"><button class="btn btn-primary btn-danger" type="button" data-toggle="modal" data-target="#modalCreateSettings">Déconnexion</button></div>
+                <div class="text-center" style="margin-top: 30px;"><a href="{{ path('logOut') }}" class="btn btn-primary btn-danger">Déconnexion</a>
+                </div>
                 <div class="more-projects">
                     <h3 class="text-center">Mes Paramètres de salon enregistrés</h3>
                     <div class="modal fade" role="dialog" tabindex="-1" id="modalCreateSettings">
