--- a/templates/profilPassword/changePassword.html.twig
+++ b/templates/profilPassword/changePassword.html.twig
@@ -10,6 +10,12 @@
         {{ form_row(form._token) }}
         <h2 class="sr-only">Login Form</h2>
         <div class="illustration"><i class="icon ion-android-mail"></i></div>
+        {% for error in form.vars['errors'] %}
+            <div class="alert alert-danger" role="alert">
+                <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
+                {{ error.message | striptags }}
+            </div>
+        {% endfor %}
         <div class="form-group"><label for="email">Mot de passe</label>{{ form_row(form.oldPassword, {'label':false, 'attr':{'class':'form-control form'}}) }}</div>
         <div class="form-group"><label for="email">Nouveau mot de passe</label>{{ form_row(form.newPassword.first) }}</div>
         <div class="form-group"><label for="email">Confirmer nouveau mot de passe</label>{{ form_row(form.newPassword.second)}}</div>
