--- a/templates/security/signIn.html.twig
+++ b/templates/security/signIn.html.twig
@@ -10,7 +10,7 @@
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
             {% if error %}
-                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                <div class="alert alert-danger" role="alert"><span class="fa fa-exclamation-circle" aria-hidden="true"></span> Une erreur est survenue, le mail ou le mot de passe est invalide</div>
             {% endif %}
             <div class="form-group"><input class="form-control form-sign" required type="text" name="_username" placeholder="Email"></div>
             <div class="form-group"><input class="form-control form-sign" required type="password" name="_password" placeholder="Mot de passe"></div>
