--- a/templates/room_settings/_form.html.twig
+++ b/templates/room_settings/_form.html.twig
@@ -6,10 +6,10 @@
         {{ form_row(form.nbMaxPlayer,{'label':'Nombre de joueurs maximum :', 'attr':{'class':'form-control '}}) }}
     </div>
     <div class="form-group">
-        {{ form_row(form.showScore,{'label':'Montrer le score :', 'attr':{'class':'form-check-label '}}) }}
+       {{ form_row(form.oneAnswerOnly,{'label':'Afficher le score :', 'attr':{'class':'form-check-label '}}) }}
     </div>
     <div class="form-group">
-        {{ form_row(form.oneAnswerOnly,{'label':'Questions à choix multiple :', 'attr':{'class':'form-check-label '}}) }}
+        {{ form_row(form.showScore,{'label':'Questions à choix multiple :', 'attr':{'class':'form-check-label '}}) }}
     </div>
     <div class="form-group">
         {{ form_row(form.numberRound,{'label':'Nombre de tours', 'attr':{'class':'form-control '}}) }}
