--- a/templates/security/signIn.html.twig
+++ b/templates/security/signIn.html.twig
@@ -20,6 +20,6 @@
             {% endif %}
             <div class="form-group"><input class="form-control form-sign" required type="text" name="_username" placeholder="Email"></div>
             <div class="form-group"><input class="form-control form-sign" required type="password" name="_password" placeholder="Mot de passe"></div>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Se connecter</button></div><a class="forgot" href="{{ path('signUp') }}">vous n'avez pas encore de compte ?</a></form>
+            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Se connecter</button></div><a class="forgot" href="{{ path('forgotPasswordRequest') }}">Mot de passe oublié ?</a><a class="forgot" href="{{ path('signUp') }}">Vous n'avez pas encore de compte ?</a></form>
     </div>
 {% endblock %}
