--- a/templates/global/suggestQuestion.html.twig
+++ b/templates/global/suggestQuestion.html.twig
@@ -32,3 +32,8 @@
     {% include 'fragments/footer.html.twig' %}
 {% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('suggestQuestion') }}
+{% endblock %}
+
