--- a/templates/room_settings/edit.html.twig
+++ b/templates/room_settings/edit.html.twig
@@ -3,11 +3,16 @@
 {% block title %}Edit RoomSettings{% endblock %}
 
 {% block body %}
-    <h1>Edit RoomSettings</h1>
+    <main class="page project-page">
+        <section class="portfolio-block project">
+            <div class="container">
+                <div class="heading">
+                    <h2>Modification des paramètres</h2>
+                </div>
+                {{ include('room_settings/_form.html.twig', {form:form,button:'Sauvegarder' })}}
 
-    {{ include('room_settings/_form.html.twig', {form:form,button:'Sauvegarder' })}}
-
-    <a href="{{ path('room_settings_index') }}">back to list</a>
-
-    {{ include('room_settings/_delete_form.html.twig') }}
+                {# {{ include('room_settings/_delete_form.html.twig') }} #}
+            </div>
+        </section>
+    </main>
 {% endblock %}
