--- a/templates/room_settings/_form.html.twig
+++ b/templates/room_settings/_form.html.twig
@@ -19,8 +19,13 @@
     {{ form_row(form.game,{'label':false, 'attr':{'class':'form-check-label'}}) }}
 </div>#}
 <div class="form-group">
+    {{ form_label(form.subCategories, 'Quizz') }}
     {{ form_row(form.subCategories,{'label':false, 'attr':{'class':'form-check-label'}}) }}
-
+</div>
+<div class="form-group">
+    {{ form_label(form.subCategories, 'Guess The') }}
+    {{ form_row(form_g.subCategories,{'label':false, 'attr':{'class':'form-check-label'}}) }}
+</div>
     <div class="form-check">
         {#   {% for gameA in form.game %}
                     {{ form_row(gameA , {'label_attr' : {
@@ -40,8 +45,6 @@
     </div>
 </div>
 
-</div>
-<div>
     <div class="modal-footer"><a href="{{ path('account') }}"  class="btn btn-light" type="reset" data-dismiss="modal">Annuler</a><button class="btn btn-primary btn-success" type="submit" >{{ button|default('Créer') }}</button></div>
 </div>
 
